Changed complete Homepage

--- a/css/device-mockups.css
+++ b/css/device-mockups.css
@@ -5,7 +5,7 @@
  * Last Build: Thu Dec 20 2018 14:05:50
  */
 .device-wrapper {
-  max-width: 300px;
+  /*max-width: 300px;*/
   width: 100%; }
 
 .device {
