--- a/css/style.default.css
+++ b/css/style.default.css
@@ -1196,11 +1196,12 @@ section {
 .device-wrapper {
   z-index: 999;
   position: relative;
+  padding-top: 5rem;
 }
 
-.device {
+/*.device {
   border-radius: 3rem;
-}
+}*/
 
 .device .screen {
   overflow: hidden;
@@ -1230,8 +1231,8 @@ section {
 }
 
 .device[data-device="iPhoneX"][data-orientation="portrait"][data-color="black"] {
-  padding-bottom: 202.898072%;
-  background-image: url(../img/device-mockups/iPhoneX/portrait.png) !important;
+  padding-bottom: 160.898072%;
+ /* background-image: url(../img/device-mockups/iPhoneX/portrait.png) !important;
   z-index: initial;
 }
 
@@ -1245,14 +1246,14 @@ section {
   overflow: hidden;
   overflow: hidden;
 }
-
+*/
 /*
 
 =====================
 STYLE SWITCHER FOR DEMO
 =====================
 
-*/
+*/}
 #style-switch-button {
   position: fixed;
   top: 120px;
@@ -1872,16 +1873,16 @@ STYLE SWITCHER FOR DEMO
 }
 
 .btn-outline-warning {
-  color: #ffc107;
+  color: #f17c1d;
   background-color: transparent;
   background-image: none;
-  border-color: #ffc107;
+  border-color: #f17c1d;
 }
 
 .btn-outline-warning:hover {
   color: #fff;
-  background-color: #ffc107;
-  border-color: #ffc107;
+  background-color: #f17c1d;
+  border-color: #f17c1d;
 }
 
 .btn-outline-warning:focus, .btn-outline-warning.focus {
@@ -1889,7 +1890,7 @@ STYLE SWITCHER FOR DEMO
 }
 
 .btn-outline-warning.disabled, .btn-outline-warning:disabled {
-  color: #ffc107;
+  color: #f17c1d;
   background-color: transparent;
 }
 
@@ -2065,7 +2066,7 @@ h6,
 
 h1,
 .h1 {
-  font-size: 3rem;
+  font-size: 4.6rem;
 }
 
 h2,
@@ -2511,9 +2512,9 @@ a.text-dark:hover, a.text-dark:focus {
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
 }
 
-.shadow {
+/*.shadow {
   box-shadow: 0 5px 25px rgba(0, 0, 0, 0.08) !important;
-}
+}*/
 
 .shadow-lg {
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175) !important;
