--- a/verticaltimeline_index.css
+++ b/verticaltimeline_index.css
@@ -215,10 +215,10 @@ body {
       left: 50%;
       content: ' ';
       display: block;
-      width: 12px;
-      height: 12px;
+      width: 18px;
+      height: 18px;
       margin-left: -9px;
-      background: #fff;
+      background: rgb(247, 158, 99);
       border-radius: 10px;
       border: 4px solid rgb(255,80,80);
       z-index: 10;
@@ -283,5 +283,11 @@ body {
   .direction-r .desc {
       margin: 1em 4em 0 4em;
   }
+  .direction-l .flag:before,
+  .direction-r .flag:before {
   
+    width: 20px;
+    height: 20px;
+   
+  }
   }
